[package]
name = "juicepress"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
config = "0.15.22"
elf = "0.8.0"
extract-strings = "0.5.0"
futures = "0.3.31"
fuzzt = "0.3.1"
hex = "0.4.3"
jwalk = "0.8.1"
lazy-regex = "3.4.1"
num_cpus = "1.17.0"
ordered-float = "5.0.0"
rayon = "1.10.0"
rphonetic = "3.0.3"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio", "bigdecimal"] }
tokio = { version = "1.44.2", features = ["full"] }
tree_magic_mini = { version = "3.2.0", features = ["with-gpl-data"] }
walkdir = "2.5.0"

[profile.optimization]
inherits = "release"
debug = 1
