[project]
name = "lfwc_scraper"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
version = "0.1.0"

dependencies = [
    "scrapy==2.11.2",
    "selenium<4",
    "scrapy_selenium==0.0.7",
    "webdriver-manager==4.0.1",
    "urllib3<1.27"
]

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 119
target-version = ["py312"]
include = "firmware"
